src/test/deca/context/valid/testDeclFields.deca
class A {
    int a;
    float b;
    boolean c = true;
}
