src/test/deca/context/invalid/testDoubleDefinitionClass.deca
// Description : Double définition de classe
class A {
    int a;
}

class A {
    int b;
}
